# esp-idf-world-weather

./: CMakeLists.txt  Makefile  README.md  getpem.sh  partitions_example.csv  sdkconfig.defaults  test.py
fonts/: test.json
main/: CMakeLists.txt  Kconfig.projbuild  cmd.h  component.mk  ili9340.c  ili9340.h  m5stack.c  main.c  wifi_sta.c  wifi_sta.h
